--- a/index.html
+++ b/index.html
@@ -677,31 +677,30 @@ async function sendSimpleRecord(result) {
   if (!state.mode)     return toast('検査種別を選んでください');
   if (!debounceSendGuard()) return;
 
-  const isHold   = (result === 'hold');      // ★ 保留判定
   const group_id = makeGroupId();
+  const isHold   = (result === 'hold');
 
   const params = {
     k: CONFIG.KEY,
     operator: state.operator,
     mode: state.mode,
-    // ★ ここを "fail" にマップしない。渡ってきた値そのまま保存
-    //    pass / fail / hold の3値を素直に送る
-    result: result,
+    result: result,                                   // ★そのまま送る（failに変換しない）
+    fail_seq: (result === 'pass' || isHold) ? '0' : '1', // ★hold=0 / pass=0 / fail=1
     qty: '1',
-    group_id,
-    // ★ fail_seq: pass=0 / hold=0 / fail=1
-    fail_seq: (result === 'pass' || isHold) ? '0' : '1'
+    group_id
   };
 
-  // 楽観UI：先に成功トーストを出す
+  // デバッグログ（暫定）：送る直前の値を確認
+  log('OUT ' + JSON.stringify(params));
+
+  // 楽観UI
   toast(isHold ? '保留を記録しました' : '記録しました');
   resetFlow();
 
   try {
-    const res = await send(params); // ← 共通送信ヘルパー（JSONを返すようにしておく）
+    const res = await send(params);                 // send() は JSON を返す実装に
     const ok = res && (res.ok === true || res.ok === 'true');
     if (!ok) throw new Error(res && res.error ? res.error : 'NG');
-    // 成功時は何もしない（すでにトースト表示済み）
   } catch (e) {
     toast('送信失敗：通信環境を確認し再送してください');
     log('送信失敗: ' + (e.message || e));
