--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 
 <!-- Mode1 のみ表示するサブ選択 -->
 <section class="card hidden" id="mode1SubCard" aria-label="Mode1サブ選択">
-  <div class="section-title">サブ選択（Mode1のみ）</div>
+  <div class="section-title">サブ選択</div>
   <div class="row" id="mode1SubBar">
     <button class="chip" id="subPP"      data-value="PP">PPサンプル</button>
     <button class="chip" id="subAccept"  data-value="ACCEPT">受け入れ検品</button>
