--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 <div class="dir-grid" id="dirGrid1">
   <button class="dir-btn" data-kind="position" data-value="front">前</button>
   <button class="dir-btn" data-kind="position" data-value="back">後</button>
-  <button class="dir-btn" data-kind="side"     data-value="L">左</button>
-  <button class="dir-btn" data-kind="side"     data-value="R">右</button>
+  <button class="dir-btn" data-kind="side"     data-value="left">左</button>
+  <button class="dir-btn" data-kind="side"     data-value="right">右</button>
 </div>
 
   <div class="section-title" style="margin-top:10px">水没箇所（必須）</div>
