--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@ const CONFIG = {
   DEFECTS: [
     {key:'pinhole', label:'ピンホール'},
     {key:'seam', label:'接合部'},
-    {key:'tape', label:'テープ'}
+    {key:'tape', label:'テープ'},
+    {key:'stitch', label:'チドリ部'}
   ],
   SEND_DEBOUNCE_MS: 2000
 };
